Update the button visibility when mouse enters or exits from notification surface window

The outer view's ONMOUSEENTERED/EXITED are not called on toast, so we need to handle the window's event handlers.

BUG=728915
TEST=manual (issue is not happened)

Review-Url: https://codereview.chromium.org/2922643002
Cr-Commit-Position: refs/heads/master@{#477927}

Former-commit-id: 7b1b44becb55f7920992b9027307531932f83ce7