ui/arc/notification/arc_custom_notification_view.cc
@@ -85,6 +85,12 @@ class ArcCustomNotificationView::EventForwarder : public ui::EventHandler {
       ui::LocatedEvent* located_event = event->AsLocatedEvent();
       located_event->target()->ConvertEventToTarget(widget->GetNativeWindow(),
                                                     located_event);
+      if (located_event->type() == ui::ET_MOUSE_ENTERED ||
+          located_event->type() == ui::ET_MOUSE_EXITED) {
+        owner_->UpdateControlButtonsVisibility();
+        return;
+      }
+
       if (located_event->type() == ui::ET_MOUSE_MOVED) {
         widget->OnMouseEvent(located_event->AsMouseEvent());
       } else if (located_event->IsScrollEvent()) {
